tested new changes to to_graph.py

--- a/cif_to_graph.ipynb
+++ b/cif_to_graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,18 +37,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/adam/anaconda3/envs/MsProject/lib/python3.13/site-packages/pymatgen/io/cif.py:1290: UserWarning: Issues encountered while parsing CIF: 8 fractional coordinates rounded to ideal values to avoid issues with finite precision.\n",
-      "  warnings.warn(\"Issues encountered while parsing CIF: \" + \"\\n\".join(self.warnings))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get defective structure\n",
     "defective_file_path = Path(f\"{dataset_path}/high_GaSe/cifs/GaSe_Ga72Se69S1_90b1b09f-acf0-46e6-8173-a2e71c884054.cif\")\n",
@@ -57,8 +48,7 @@
     "# Get reference structure\n",
     "ref_file_path = Path(f\"{dataset_path}/high_GaSe/GaSe.cif\")\n",
     "ref_unit_cell = Structure.from_file(ref_file_path)\n",
-    "reference_structure = ref_unit_cell.make_supercell([6,6,1])\n",
-    "\n"
+    "reference_structure = ref_unit_cell.make_supercell([6,6,1])"
    ]
   },
   {
@@ -66,35 +56,33 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def struct_to_dict(structure):\n",
-    "    list_of_sites = structure.sites\n",
-    "    list_of_frac_coords = np.round(structure.frac_coords,3)\n",
-    "    structure_dict = {i: j for i, j in zip(list_of_sites, list_of_frac_coords)}\n",
-    "    return structure_dict\n",
+    "    rounded_coords = np.round(structure.frac_coords, 3)\n",
+    "    return {tuple(coord): site for coord, site in zip(rounded_coords, structure.sites)}\n",
     "\n",
-    "def get_index(ref_struct, a_site):\n",
-    "    for index, site in enumerate(ref_struct.sites):\n",
-    "        if np.array_equal(site.coords, a_site.coords):\n",
-    "            return index\n",
+    "def fe_site(original, new):\n",
+    "    # from elements.csv\n",
+    "    element_pot = element_pot = {\"Mo\":-10.9332, \"S\":-4.127, \"W\":-13.0106, \"Se\":-3.489,\n",
+    "                   \"B\":-6.704, \"N\":-8.324, \"Ga\":-3.03, \"In\":-2.715,\n",
+    "                   \"P\":-5.362, \"V\":-8.992, \"O\":-4.938, \"C\":-9.226}\n",
+    "    \n",
+    "    if new == 0: # For vcancy\n",
+    "        fe_defect = element_pot[original]* -1\n",
     "\n",
+    "    else: # For substitution\n",
+    "        fe_defect = (element_pot[original]* -1) + element_pot[new]\n",
+    "        \n",
+    "    return fe_defect\n",
     "\n",
     "def get_defects_structure(defective_struct, reference_struct):\n",
-    "    copy_defective_struct = defective_struct.copy()\n",
     "    mindnn = MinimumDistanceNN()\n",
     "    # struct to dict\n",
-    "    defective_dict = struct_to_dict(copy_defective_struct)\n",
+    "    defective_dict = struct_to_dict(defective_struct)\n",
     "    reference_dict = struct_to_dict(reference_struct)\n",
     "\n",
     "    # Get lattice of defective structure\n",
-    "    structure_lattice = copy_defective_struct.lattice\n",
+    "    structure_lattice = defective_struct.lattice\n",
     "\n",
     "    # List to add all defect sites\n",
     "    defects_list = []\n",
@@ -102,29 +90,32 @@
     "    # Dictionary to hold properties of each defect site\n",
     "    defects_properties = {} \n",
     "\n",
-    "    for ref_site, ref_coords in reference_dict.items():\n",
-    "        matching = False\n",
-    "        for def_site, def_coords in defective_dict.items():\n",
-    "            if np.array_equal(ref_coords, def_coords):\n",
-    "                matching = True\n",
-    "                if ref_site.specie != def_site.specie: # Substitution case\n",
-    "                    # Add site to defects list\n",
-    "                    defects_list.append(def_site)\n",
+    "    for ref_coord, ref_site in reference_dict.items():\n",
+    "        # Use the reference coordinates to get the defective site\n",
+    "        def_site = defective_dict.get(ref_coord)\n",
     "\n",
-    "                    # Get atomic number change and defect type\n",
-    "                    add_property = {\"original_an\":ref_site.specie.Z,\n",
-    "                                    \"new_an\": def_site.specie.Z,\n",
-    "                                    \"an_change\": def_site.specie.Z - ref_site.specie.Z,\n",
-    "                                    \"vacancy_defect\": 0.0,\n",
-    "                                    \"substitution_defect\": 1.0,\n",
-    "                                    \"bonds_broken\": 0.0}\n",
-    "                    defects_properties[def_site] = add_property\n",
+    "        if def_site:  # The site is found in both the reference structure and the defective structure\n",
+    "            # But are the species the same?\n",
+    "            if ref_site.specie != def_site.specie:  # Substitution\n",
+    "                # Add site to defects list\n",
+    "                defects_list.append(def_site)\n",
     "\n",
-    "        if not matching: # Vacancy case\n",
+    "                # Get atomic number change and defect type\n",
+    "                add_property = {\"original_an\":ref_site.specie.Z,\n",
+    "                                \"new_an\": def_site.specie.Z,\n",
+    "                                \"an_change\": def_site.specie.Z - ref_site.specie.Z,\n",
+    "                                \"vacancy_defect\": 0.0,\n",
+    "                                \"substitution_defect\": 1.0,\n",
+    "                                \"bonds_broken\": 0.0,\n",
+    "                                \"site_fe\": fe_site(ref_site.species_string,def_site.species_string)}\n",
+    "                defects_properties[def_site] = add_property\n",
+    "\n",
+    "        else: # the site from ref_structure is not found in defective structure\n",
+    "            # This means that the site is a vacancy site\n",
     "            # Add site to defective structure\n",
     "            vacant_site = PeriodicSite(\n",
     "                species= DummySpecie(),\n",
-    "                coords= ref_coords,\n",
+    "                coords= ref_coord,\n",
     "                coords_are_cartesian= False, \n",
     "                lattice= structure_lattice\n",
     "                )\n",
@@ -138,7 +129,8 @@
     "                          \"an_change\": 0 - ref_site.specie.Z,\n",
     "                          \"vacancy_defect\": 1.0,\n",
     "                          \"substitution_defect\": 0.0,\n",
-    "                          \"bonds_broken\": mindnn.get_cn(reference_struct, get_index(reference_struct, ref_site))}\n",
+    "                          \"bonds_broken\": mindnn.get_cn(reference_struct, reference_struct.sites.index(ref_site)),\n",
+    "                          \"site_fe\": fe_site(ref_site.species_string,0)}\n",
     "            defects_properties[vacant_site] = add_property\n",
     "\n",
     "    # create a defects structure\n",
@@ -153,8 +145,8 @@
     "\n",
     "    return defects_struct\n",
     "\n",
-    "# defects_structure = get_defects_structure(defective_structure, reference_structure)\n",
-    "# print(defects_structure)"
+    "defects_structure = get_defects_structure(defective_structure, reference_structure)\n",
+    "print(defects_structure)"
    ]
   },
   {
@@ -163,62 +155,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "the_csv = pd.read_csv(f\"{dataset_path}/combined/high_GaSe.csv\")\n",
-    "for i in range(len(the_csv)):\n",
-    "    defective_file_path = Path(f\"{dataset_path}/{the_csv['dataset_material'][i]}/cifs/{the_csv['_id'][i]}.cif\")\n",
-    "    defective_structure = Structure.from_file(defective_file_path)\n",
-    "\n",
-    "    ref_file_path = Path(f\"{dataset_path}/{the_csv['dataset_material'][i]}/{the_csv['base'][i]}.cif\")\n",
-    "    ref_unit_cell = Structure.from_file(ref_file_path)\n",
-    "    reference_structure = ref_unit_cell.make_supercell(ast.literal_eval(f\"{the_csv['cell'][i]}\"))\n",
-    "\n",
-    "    def_struct = get_defects_structure(defective_structure, reference_structure)\n",
-    "    print(def_struct)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0, 0.0, 34, 16, -18, 0.0, 1.0], [1, 3, 34, 0, -34, 1.0, 0.0], [2, 3, 34, 0, -34, 1.0, 0.0]]\n",
-      "[[0, 1], [0, 2], [1, 0], [1, 2], [2, 0], [2, 1]]\n",
-      "[[np.float64(13.218612878118082)], [np.float64(6.143837688715257)], [np.float64(13.218612878118082)], [np.float64(11.185157478479823)], [np.float64(6.143837688715257)], [np.float64(11.185157478479823)]]\n"
-     ]
-    }
-   ],
-   "source": [
     "def get_nodes_edges(structure):\n",
     "    sites_list = structure.sites\n",
     "\n",
     "    # The nodes: These are the sites features\n",
     "    nodes = []\n",
     "    for i, site in enumerate(sites_list):\n",
-    "        node_features = [i, site.properties[\"bonds_broken\"], site.properties[\"original_an\"], site.properties[\"new_an\"],\n",
-    "                         site.properties[\"an_change\"], site.properties[\"vacancy_defect\"],\n",
-    "                         site.properties[\"substitution_defect\"]]\n",
+    "        node_features = [i, site.properties[\"bonds_broken\"], site.properties[\"original_an\"], \n",
+    "                         site.properties[\"new_an\"], site.properties[\"an_change\"], \n",
+    "                         site.properties[\"vacancy_defect\"], site.properties[\"substitution_defect\"], \n",
+    "                         site.properties[\"site_fe\"]]\n",
     "        # Node features syntax\n",
-    "        '''[index of site, number of nearset neighbors to site, Z_before defect,\n",
-    "        Z_after defect, Z_change, is site vac_site(1  for yes, 0 for no), is site sub_site(1 for yes, 0 for no)]'''\n",
     "        nodes.append(node_features)\n",
     "         \n",
     "\n",
     "    # The edges\n",
     "    edges = [] # The sites in relation\n",
     "    edge_features = [] # The distance between each site\n",
+    "\n",
+    "    from_e = []\n",
+    "    to_e = []\n",
     "    \n",
     "    for i, site_i in enumerate(sites_list):\n",
     "        for j, site_j  in enumerate(sites_list):\n",
-    "            if i != j:\n",
-    "                edges.append([i,j])\n",
-    "                dist = site_i.distance(site_j)\n",
-    "                edge_features.append([dist])\n",
+    "            from_e.append(i)\n",
+    "            to_e.append(j)\n",
+    "            # Get distance between sites\n",
+    "            dist = site_i.distance(site_j)\n",
     "\n",
+    "            # Are the defects the same or different\n",
+    "            if site_i.properties[\"an_change\"] == site_j.properties[\"an_change\"]:\n",
+    "                same_diff = 1\n",
+    "            else:\n",
+    "                same_diff = 0\n",
+    "\n",
+    "            # What is the site_fe difference\n",
+    "            site_fe_diff = np.abs(site_i.properties[\"site_fe\"] - site_j.properties[\"site_fe\"])\n",
+    "\n",
+    "            edge_features.append([dist,same_diff,site_fe_diff])\n",
+    "    edges.append(from_e)\n",
+    "    edges.append(to_e)\n",
     "    return nodes, edges, edge_features\n",
     "\n",
     "the_nodes, the_edges, the_edge_features = get_nodes_edges(defects_structure)\n",
@@ -237,8 +213,7 @@
     "    # The global attributes\n",
     "    global_attributes = [\"energy\",\"fermi_level\",\"total_mag\",\"formation_energy\",\n",
     "                         \"energy_per_atom\",\"E_1\",\"vacancy_sites\",\n",
-    "                         \"substitution_sites\",\"defect_sites\"\n",
-    "                         ]\n",
+    "                         \"substitution_sites\",\"defect_sites\"]\n",
     "    \n",
     "    target_attribute = \"band_gap_value\"\n",
     "    \n",
@@ -272,161 +247,6 @@
     "`y` = target (band gap)\n",
     "\n",
     "`u` = global features (formation energy, total_mag, etc.)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def struct_to_dict(structure):\n",
-    "    list_of_sites = structure.sites\n",
-    "    list_of_frac_coords = np.round(structure.frac_coords, 3)\n",
-    "    structure_dict = {i: j for i, j in zip(list_of_sites, list_of_frac_coords)}  # ⚠️ Using PeriodicSite as key – inefficient\n",
-    "    return structure_dict\n",
-    "\n",
-    "def get_index(ref_struct, a_site):\n",
-    "    for index, site in enumerate(ref_struct.sites):  # ⚠️ O(n) linear search\n",
-    "        if np.array_equal(site.coords, a_site.coords):  # ⚠️ Exact match on float arrays – slow and unreliable\n",
-    "            return index\n",
-    "\n",
-    "def get_defects_structure(defective_struct, reference_struct):\n",
-    "    copy_defective_struct = defective_struct.copy()  # ⚠️ Deep copy might not be necessary\n",
-    "    mindnn = MinimumDistanceNN()\n",
-    "\n",
-    "    # Convert structures to dicts\n",
-    "    defective_dict = struct_to_dict(copy_defective_struct)\n",
-    "    reference_dict = struct_to_dict(reference_struct)\n",
-    "\n",
-    "    structure_lattice = copy_defective_struct.lattice\n",
-    "    defects_list = []\n",
-    "    defects_properties = {}\n",
-    "\n",
-    "    for ref_site, ref_coords in reference_dict.items():\n",
-    "        matching = False\n",
-    "        for def_site, def_coords in defective_dict.items():  # ⚠️ Nested loop – O(n²) behavior\n",
-    "            if np.array_equal(ref_coords, def_coords):  # ⚠️ Float comparison again\n",
-    "                matching = True\n",
-    "                if ref_site.specie != def_site.specie:\n",
-    "                    defects_list.append(def_site)\n",
-    "                    add_property = {\n",
-    "                        \"original_an\": ref_site.specie.Z,\n",
-    "                        \"new_an\": def_site.specie.Z,\n",
-    "                        \"an_change\": def_site.specie.Z - ref_site.specie.Z,\n",
-    "                        \"vacancy_defect\": 0.0,\n",
-    "                        \"substitution_defect\": 1.0,\n",
-    "                        \"bonds_broken\": 0.0\n",
-    "                    }\n",
-    "                    defects_properties[def_site] = add_property\n",
-    "        if not matching:\n",
-    "            vacant_site = PeriodicSite(\n",
-    "                species=DummySpecie(),\n",
-    "                coords=ref_coords,\n",
-    "                coords_are_cartesian=False,\n",
-    "                lattice=structure_lattice\n",
-    "            )\n",
-    "            defects_list.append(vacant_site)\n",
-    "            add_property = {\n",
-    "                \"original_an\": ref_site.specie.Z,\n",
-    "                \"new_an\": 0,\n",
-    "                \"an_change\": -ref_site.specie.Z,\n",
-    "                \"vacancy_defect\": 1.0,\n",
-    "                \"substitution_defect\": 0.0,\n",
-    "                \"bonds_broken\": mindnn.get_cn(reference_struct, get_index(reference_struct, ref_site))  # ⚠️ Recomputing get_index\n",
-    "            }\n",
-    "            defects_properties[vacant_site] = add_property\n",
-    "\n",
-    "    defects_struct = Structure.from_sites(defects_list)\n",
-    "\n",
-    "    for a_site in defects_struct.sites:\n",
-    "        if a_site in defects_properties.keys():  # ⚠️ Using object as key again\n",
-    "            a_site.properties.update(defects_properties[a_site])\n",
-    "\n",
-    "    return defects_struct\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from pymatgen.core import Structure, PeriodicSite\n",
-    "from pymatgen.analysis.local_env import MinimumDistanceNN\n",
-    "from pymatgen.core.sites import DummySpecie\n",
-    "\n",
-    "def struct_to_dict_fast(structure):\n",
-    "    \"\"\"\n",
-    "    Return a dict mapping rounded fractional coordinates (as tuples) to sites.\n",
-    "    \"\"\"\n",
-    "    rounded_coords = np.round(structure.frac_coords, 3)\n",
-    "    return {tuple(coord): site for coord, site in zip(rounded_coords, structure.sites)}\n",
-    "\n",
-    "def get_coord_index_map(structure):\n",
-    "    \"\"\"\n",
-    "    Precompute a map from rounded fractional coordinates to site indices.\n",
-    "    \"\"\"\n",
-    "    rounded_coords = np.round(structure.frac_coords, 3)\n",
-    "    return {tuple(coord): i for i, coord in enumerate(rounded_coords)}\n",
-    "\n",
-    "def get_defects_structure_fast(defective_struct, reference_struct):\n",
-    "    mindnn = MinimumDistanceNN()\n",
-    "\n",
-    "    # Use optimized dicts with coordinate tuples as keys\n",
-    "    defective_dict = struct_to_dict_fast(defective_struct)\n",
-    "    reference_dict = struct_to_dict_fast(reference_struct)\n",
-    "    ref_coord_index = get_coord_index_map(reference_struct)\n",
-    "\n",
-    "    defects_list = []\n",
-    "    defects_properties = {}\n",
-    "    lattice = defective_struct.lattice\n",
-    "\n",
-    "    # Compare reference structure to defective structure\n",
-    "    for ref_coord, ref_site in reference_dict.items():\n",
-    "        def_site = defective_dict.get(ref_coord)\n",
-    "\n",
-    "        if def_site:  # Matching position found\n",
-    "            if ref_site.specie != def_site.specie:  # Substitution\n",
-    "                defects_list.append(def_site)\n",
-    "                defects_properties[def_site] = {\n",
-    "                    \"original_an\": ref_site.specie.Z,\n",
-    "                    \"new_an\": def_site.specie.Z,\n",
-    "                    \"an_change\": def_site.specie.Z - ref_site.specie.Z,\n",
-    "                    \"vacancy_defect\": 0.0,\n",
-    "                    \"substitution_defect\": 1.0,\n",
-    "                    \"bonds_broken\": 0.0\n",
-    "                }\n",
-    "        else:  # Vacancy\n",
-    "            vacant_site = PeriodicSite(\n",
-    "                species=DummySpecie(),\n",
-    "                coords=ref_coord,\n",
-    "                coords_are_cartesian=False,\n",
-    "                lattice=lattice\n",
-    "            )\n",
-    "            index = ref_coord_index[ref_coord]\n",
-    "            cn = mindnn.get_cn(reference_struct, index)\n",
-    "            defects_list.append(vacant_site)\n",
-    "            defects_properties[vacant_site] = {\n",
-    "                \"original_an\": ref_site.specie.Z,\n",
-    "                \"new_an\": 0,\n",
-    "                \"an_change\": -ref_site.specie.Z,\n",
-    "                \"vacancy_defect\": 1.0,\n",
-    "                \"substitution_defect\": 0.0,\n",
-    "                \"bonds_broken\": cn\n",
-    "            }\n",
-    "\n",
-    "    # Create new structure from defect sites\n",
-    "    defects_struct = Structure.from_sites(defects_list)\n",
-    "\n",
-    "    # Attach computed properties\n",
-    "    for site in defects_struct.sites:\n",
-    "        props = defects_properties.get(site)\n",
-    "        if props:\n",
-    "            site.properties.update(props)\n",
-    "\n",
-    "    return defects_struct\n"
    ]
   }
  ],
