--- a/forfinal.ipynb
+++ b/forfinal.ipynb
@@ -136,7 +136,7 @@
       "outputs": [],
       "source": [
         "# Read file\n",
-        "sample_df = pd.read_csv(f\"{dataset_path}/combined/combined.csv\")"
+        "comb_df = pd.read_csv(f\"{dataset_path}/combined/combined.csv\")"
       ]
     },
     {
@@ -146,10 +146,10 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "sample_copy = sample_df.copy()\n",
-        "sample_copy = sample_copy.drop([\"_id\", \"base\", \"cell\", \"dataset_material\", \"fermi_level\", \"total_mag\"], axis =1)\n",
-        "sample_copy = sample_copy.corr()\n",
-        "sample_copy"
+        "comb_copy = comb_df.copy()\n",
+        "comb_copy = comb_copy.drop([\"_id\", \"base\", \"cell\", \"dataset_material\", \"fermi_level\", \"total_mag\"], axis =1)\n",
+        "comb_copy = comb_copy.corr()\n",
+        "comb_copy"
       ]
     },
     {
@@ -168,6 +168,64 @@
       "outputs": [],
       "source": [
         "samplex_df = pd.read_csv(f\"{dataset_path}/combined/high_GaSe.csv\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "8200e6f5",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "samplex_df.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "9097aca2",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "datsets = [\"high_BN\", \"high_GaSe\", \"high_InSe\", \"high_MoS2\", \"high_P\", \"high_WSe2\",\"low_MoS2\", \"low_WSe2\"]\n",
+        "\n",
+        "ref_sites_dict = {}\n",
+        "\n",
+        "for datset in datsets:\n",
+        "    mat_split = datset.split('_')\n",
+        "    the_base = mat_split[1]\n",
+        "\n",
+        "    # Get reference structure\n",
+        "    ref_unit_cell = Structure.from_file(f\"{dataset_path}/{datset}/{the_base}.cif\")\n",
+        "    cell_source = pd.read_csv(f\"{dataset_path}/initial_structures.csv\")\n",
+        "    the_cell = cell_source.loc[cell_source[\"base\"] == the_base, \"cell_size\"].iloc[0]\n",
+        "    reference_structure = ref_unit_cell.make_supercell(ast.literal_eval(the_cell))\n",
+        "\n",
+        "    # Get number of ref sites\n",
+        "    ref_sites_dict[datset] = reference_structure.num_sites\n",
+        "\n",
+        "\n",
+        "def get_conc(row, ref_sites_dict):\n",
+        "    total_num_sites = ref_sites_dict[row[\"dataset_material\"]]\n",
+        "\n",
+        "    # Get defect conc\n",
+        "    defect_conc = row[\"defect_sites\"]/total_num_sites\n",
+        "    row[\"defect_concentration\"] = defect_conc\n",
+        "\n",
+        "    row[\"strata\"] = f\"{row[\"base\"]}_{defect_conc}\"\n",
+        "    return row\n",
+        "\n",
+        "samplex_df = samplex_df.apply(lambda row: get_conc(row,ref_sites_dict), axis=1)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "a9d4315c",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "samplex_df.head()"
       ]
     },
     {
@@ -202,8 +260,8 @@
         "    the_nodes, the_edges, the_edge_features = to_graph.get_nodes_edges(defects_structure)\n",
         "\n",
         "    global_attributes = [\"energy\",\"fermi_level\",\"total_mag\",\"formation_energy\",\n",
-        "                         \"energy_per_atom\",\"E_1\",\"vacancy_sites\",\n",
-        "                         \"substitution_sites\",\"defect_sites\"]\n",
+        "                         \"energy_per_atom\",\"E_1\",\"vacancy_sites\", \"strata\"\n",
+        "                         \"substitution_sites\",\"defect_sites\", \"defect_concentration\"]\n",
         "    \n",
         "    global_features = [row[i] for i in global_attributes]\n",
         "    \n",
