trial001: Model training

--- a/model_build.ipynb
+++ b/model_build.ipynb
@@ -169,14 +169,14 @@
    "outputs": [],
    "source": [
     "# Model 2: Model considering edge features\n",
-    "class GNNWithEdgeFeatures(nn.Module):\n",
+    "class GNNModel(nn.Module):\n",
     "    def __init__(self, node_dim, edge_dim, global_dim, hidden_dim):\n",
     "        super().__init__()\n",
     "        # Edge NN maps edge_attr to weight matrix\n",
     "        self.edge_nn = nn.Sequential(\n",
     "            nn.Linear(edge_dim, 32),\n",
     "            nn.ReLU(),\n",
-    "            nn.Linear(32, node_dim * hidden_dim)\n",
+    "            nn.Linear(32, node_dim * hidden_dim) \n",
     "        )\n",
     "\n",
     "        self.conv1 = NNConv(node_dim, hidden_dim, self.edge_nn, aggr='mean')\n",
@@ -240,7 +240,7 @@
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu') \n",
     "\n",
     "# Instance of the model\n",
-    "model = GraphLevelGNN(node_dim=7, global_dim=9, hidden_dim=64).to(device)\n",
+    "model = GNNModel(node_dim=8, edge_dim=3, global_dim=11, hidden_dim=32).to(device)\n",
     "# model = GNNWithEdgeFeatures(node_dim=3, edge_dim=1, global_dim=2, hidden_dim=64).to(device)\n",
     "\n",
     "\n",
@@ -272,8 +272,8 @@
     "    for data in train_loader:\n",
     "        data = data.to(device)\n",
     "        optimizer.zero_grad()\n",
-    "        out = model(data.x, data.edge_index, data.batch, data.u)\n",
-    "        # out = model(data.x, data.edge_index, data.edge_attr, data.batch, data.u) # when added edg features\n",
+    "        # out = model(data.x, data.edge_index, data.batch, data.u)\n",
+    "        out = model(data.x, data.edge_index, data.edge_attr, data.batch, data.u) # when added edg features\n",
     "        loss = loss_fn(out, data.y)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
