--- a/forfinal.ipynb
+++ b/forfinal.ipynb
@@ -241,10 +241,11 @@
         "    total_num_sites = ref_sites_dict[row[\"dataset_material\"]]\n",
         "\n",
         "    # Get defect conc\n",
-        "    defect_conc = row[\"defect_sites\"]/total_num_sites\n",
+        "    defect_conc = round(row[\"defect_sites\"]/total_num_sites,5)\n",
         "    row[\"defect_concentration\"] = defect_conc\n",
         "\n",
-        "    row[\"strata\"] = f\"{row[\"base\"]}_{defect_conc}\"\n",
+        "    row[\"mat_conc\"] = f\"{row[\"base\"]}_{defect_conc}\"\n",
+        "    row[\"strata\"] = row[\"mat_conc\"].astype('category').cat.codes\n",
         "    return row\n",
         "\n",
         "samplex_df = samplex_df.apply(lambda row: get_conc(row,ref_sites_dict), axis=1)"
