--- a/model_build.ipynb
+++ b/model_build.ipynb
@@ -79,9 +79,9 @@
     "# Split the data\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "train_graphs, test_graphs = train_test_split(whole_graph, test_size=0.3, stratify= 'Strata', random_state=42)\n",
+    "train_graphs, test_graphs = train_test_split(whole_graph, test_size=0.3, stratify= whole_graph.u['strata'], random_state=42)\n",
     "\n",
-    "val_graphs, test_graphs = train_test_split(test_graphs, test_size=0.5, stratify='strata', random_state=42)"
+    "val_graphs, test_graphs = train_test_split(test_graphs, test_size=0.5, stratify=whole_graph['strata'], random_state=42)"
    ]
   },
   {
