Refined splitting and intergration

--- a/forfinal.ipynb
+++ b/forfinal.ipynb
@@ -32,7 +32,7 @@
         "    dataset_path = '/content/drive/My Drive/dataset'\n",
         "\n",
         "    # Install required packages\n",
-        "    !pip install pymatgen torch torch_geometric\n",
+        "    !pip install pymatgen torch_geometric\n",
         "    import torch\n",
         "    from torch_geometric.data import Data\n",
         "\n",
@@ -42,7 +42,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "a10ddae3",
       "metadata": {
         "id": "a10ddae3"
@@ -66,7 +66,7 @@
         "id": "7aaaa3c2"
       },
       "source": [
-        "## When  dealing with high dataset only"
+        "## For Highly Concentrated Defects Datasets"
       ]
     },
     {
@@ -107,7 +107,7 @@
         "id": "b2a1865b"
       },
       "source": [
-        "## When dealing with low dataset"
+        "## For Lowly Concentrated Defects Datasets"
       ]
     },
     {
@@ -148,7 +148,7 @@
         "id": "fc047800"
       },
       "source": [
-        "## When dealing with both low and high dataset"
+        "## For High and Low Concentrations of Defects Datasets"
       ]
     },
     {
@@ -191,24 +191,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "3ce9677d",
       "metadata": {
         "id": "3ce9677d"
       },
       "outputs": [],
       "source": [
-        "samplex_df = pd.read_csv(f\"{dataset_path}/combined/high_WSe2.csv\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "8200e6f5",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "samplex_df.head()"
+        "combined_df = pd.read_csv(f\"{dataset_path}/combined/high_WSe2.csv\")"
       ]
     },
     {
@@ -216,7 +206,28 @@
       "execution_count": null,
       "id": "9097aca2",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/home/adam/anaconda3/envs/MsProject/lib/python3.13/site-packages/pymatgen/io/cif.py:1290: UserWarning: Issues encountered while parsing CIF: 4 fractional coordinates rounded to ideal values to avoid issues with finite precision.\n",
+            "  warnings.warn(\"Issues encountered while parsing CIF: \" + \"\\n\".join(self.warnings))\n",
+            "/home/adam/anaconda3/envs/MsProject/lib/python3.13/site-packages/pymatgen/io/cif.py:1290: UserWarning: Issues encountered while parsing CIF: 8 fractional coordinates rounded to ideal values to avoid issues with finite precision.\n",
+            "  warnings.warn(\"Issues encountered while parsing CIF: \" + \"\\n\".join(self.warnings))\n",
+            "/home/adam/anaconda3/envs/MsProject/lib/python3.13/site-packages/pymatgen/io/cif.py:1290: UserWarning: Issues encountered while parsing CIF: 8 fractional coordinates rounded to ideal values to avoid issues with finite precision.\n",
+            "  warnings.warn(\"Issues encountered while parsing CIF: \" + \"\\n\".join(self.warnings))\n",
+            "/home/adam/anaconda3/envs/MsProject/lib/python3.13/site-packages/pymatgen/io/cif.py:1290: UserWarning: Issues encountered while parsing CIF: 6 fractional coordinates rounded to ideal values to avoid issues with finite precision.\n",
+            "  warnings.warn(\"Issues encountered while parsing CIF: \" + \"\\n\".join(self.warnings))\n",
+            "/home/adam/anaconda3/envs/MsProject/lib/python3.13/site-packages/pymatgen/io/cif.py:1290: UserWarning: Issues encountered while parsing CIF: 6 fractional coordinates rounded to ideal values to avoid issues with finite precision.\n",
+            "  warnings.warn(\"Issues encountered while parsing CIF: \" + \"\\n\".join(self.warnings))\n",
+            "/home/adam/anaconda3/envs/MsProject/lib/python3.13/site-packages/pymatgen/io/cif.py:1290: UserWarning: Issues encountered while parsing CIF: 6 fractional coordinates rounded to ideal values to avoid issues with finite precision.\n",
+            "  warnings.warn(\"Issues encountered while parsing CIF: \" + \"\\n\".join(self.warnings))\n",
+            "/home/adam/anaconda3/envs/MsProject/lib/python3.13/site-packages/pymatgen/io/cif.py:1290: UserWarning: Issues encountered while parsing CIF: 6 fractional coordinates rounded to ideal values to avoid issues with finite precision.\n",
+            "  warnings.warn(\"Issues encountered while parsing CIF: \" + \"\\n\".join(self.warnings))\n"
+          ]
+        }
+      ],
       "source": [
         "# Add strata\n",
         "datsets = [\"high_BN\", \"high_GaSe\", \"high_InSe\", \"high_MoS2\", \"high_P\", \"high_WSe2\",\"low_MoS2\", \"low_WSe2\"]\n",
@@ -244,21 +255,31 @@
         "    defect_conc = round(row[\"defect_sites\"]/total_num_sites,5)\n",
         "    row[\"defect_concentration\"] = defect_conc\n",
         "\n",
-        "    row[\"mat_conc\"] = f\"{row[\"base\"]}_{defect_conc}\"\n",
-        "    row[\"strata\"] = row[\"mat_conc\"].astype('category').cat.codes\n",
+        "    # Add material name\n",
+        "    row[\"to_strata\"] = f\"{row['base']}_{row['defect_concentration']}\"\n",
         "    return row\n",
         "\n",
-        "samplex_df = samplex_df.apply(lambda row: get_conc(row,ref_sites_dict), axis=1)"
+        "combined_df = combined_df.apply(lambda row: get_conc(row,ref_sites_dict), axis=1)\n",
+        "\n",
+        "unique_values = pd.unique(combined_df[\"to_strata\"])\n",
+        "mapping = {value: i for i, value in enumerate(unique_values)}\n",
+        "\n",
+        "combined_df[\"strata\"] = combined_df[\"to_strata\"].map(mapping)"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "a9d4315c",
+      "id": "12096f08",
       "metadata": {},
       "outputs": [],
       "source": [
-        "samplex_df.head()"
+        "# How about i split the data here\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "train_set, test_set = train_test_split(combined_df, test_size=0.3, stratify=combined_df['strata'], random_state=42)\n",
+        "\n",
+        "val_set, testing_set = train_test_split(test_set, test_size=0.5, stratify=combined_df['strata'], random_state=42)"
       ]
     },
     {
@@ -283,8 +304,8 @@
         "    the_nodes, the_edges, the_edge_features = to_graph.get_nodes_edges(defects_structure)\n",
         "\n",
         "    global_attributes = [\"energy\",\"fermi_level\",\"total_mag\",\"formation_energy\",\n",
-        "                         \"energy_per_atom\",\"E_1\",\"vacancy_sites\", \"strata\"\n",
-        "                         \"substitution_sites\",\"defect_sites\", \"defect_concentration\"]\n",
+        "                         \"energy_per_atom\",\"E_1\",\"vacancy_sites\", \"substitution_sites\",\n",
+        "                         \"defect_sites\", \"defect_concentration\"]\n",
         "    \n",
         "    global_features = [row[i] for i in global_attributes]\n",
         "\n",
@@ -296,10 +317,20 @@
         "                    u=torch.tensor(global_features), y=torch.tensor(target_features))\n",
         "    return the_data\n",
         "\n",
-        "samplex = samplex_df.apply(lambda row: graphy(row), axis = 1).tolist()\n",
+        "# samplex = samplex_df.apply(lambda row: graphy(row), axis = 1).tolist()\n",
         "\n",
-        "# Save the data\n",
-        "torch.save(samplex, f\"{dataset_path}/combined/all_graphs.pt\")"
+        "# Save the data before splitting\n",
+        "# torch.save(samplex, f\"{dataset_path}/combined/all_graphs.pt\")\n",
+        "\n",
+        "# After splitting, turn them into graph data\n",
+        "training = train_set.apply(lambda row: graphy(row), axis = 1).tolist()\n",
+        "torch.save(training, f\"{dataset_path}/combined/training.pt\")\n",
+        "           \n",
+        "validating = val_set.apply(lambda row: graphy(row), axis = 1).tolist()\n",
+        "torch.save(validating, f\"{dataset_path}/combined/validating.pt\")\n",
+        "\n",
+        "testing = testing_set.apply(lambda row: graphy(row), axis = 1).tolist()\n",
+        "torch.save(testing, f\"{dataset_path}/combined/testing.pt\")"
       ]
     }
   ],
