--- a/model_build.ipynb
+++ b/model_build.ipynb
@@ -16,7 +16,7 @@
     "    dataset_path = '/content/drive/My Drive/dataset'\n",
     "\n",
     "    # Install required packages\n",
-    "    !pip install torch torch_geometric\n",
+    "    !pip install torch_geometric\n",
     "    import torch\n",
     "    from torch_geometric.data import Data, DataLoader\n",
     "\n",
@@ -35,53 +35,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6aa691f2",
+   "id": "7abbbf3e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the data\n",
-    "whole_graph = torch.load(f\"{dataset_path}/combined/all_graphs.pt\", weights_only=False)\n",
+    "# Training set\n",
+    "train_graphs = torch.load(f\"{dataset_path}/combined/training.pt\", weights_only=False)\n",
     "\n",
-    "'''\n",
-    "---Graph format---\n",
-    "nodes(x): \n",
-    "    (num_nodes, node_dim)\n",
-    "    num_nodes is the number of nodes\n",
-    "    node_dim is the number of features for every node\n",
-    "    node dim SHOULD be the same for every node.\n",
+    "# Validating set\n",
+    "val_graphs = torch.load(f\"{dataset_path}/combined/validating.pt\", weights_only=False)\n",
     "\n",
-    "edge_index:\n",
-    "    The edge index is a list comprising of 2 lists.\n",
-    "    i.e. [[(num_nodes)^2],[(num_nodes)^2]]\n",
-    "\n",
-    "edge_attr:\n",
-    "    This is a list of (num_nodes)^2 points\n",
-    "    These points SHOULD have a definate number of features\n",
-    "\n",
-    "global_features(u):\n",
-    "    (1,gf)\n",
-    "    1 because they are common to the whole graph \n",
-    "    the `gf` SHOULD be the same for every future graph\n",
-    "\n",
-    "target(y):\n",
-    "    (1,1)\n",
-    "    One value for the whole graph\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "acb95213",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Split the data\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "train_graphs, test_graphs = train_test_split(whole_graph, test_size=0.3, stratify= whole_graph.u['strata'], random_state=42)\n",
-    "\n",
-    "val_graphs, test_graphs = train_test_split(test_graphs, test_size=0.5, stratify=whole_graph['strata'], random_state=42)"
+    "# Testing set\n",
+    "test_graphs = torch.load(f\"{dataset_path}/combined/testing.pt\", weights_only=False)"
    ]
   },
   {
